# light-years

./: .gitignore  CMakeLists.txt  main.cpp
LightYears/: CMakeLists.txt
LightYears/include/framework/: application.h
LightYears/src/: main.cpp
LightYears/src/framework/: application.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: entryPoint.h
LightYearsEngine/include/framework/: Actor.h  AssetManager.h  Core.h  MathUtility.h  Object.h  PhysicsSystem.h  World.h  application.h
LightYearsEngine/src/: entryPoint.cpp
LightYearsEngine/src/framework/: Actor.cpp  AssetManager.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  World.cpp  application.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/PlayerSpaceship/: PlayerSpaceship.h
LightYearsGame/include/Spaceship/: Spaceship.h
LightYearsGame/include/gameFramework/: gameApplication.h
LightYearsGame/include/weapon/: Bullet.h  BulletShooter.h  Shooter.h
LightYearsGame/src/PlayerSpaceship/: PlayerSpaceship.cpp
LightYearsGame/src/Spaceship/: Spaceship.cpp
LightYearsGame/src/Weapon/: Bullet.cpp  BulletShooter.cpp  Shooter.cpp
LightYearsGame/src/gameFramework/: gameApplication.cpp
